--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
         </div>
     </div>
     
-    <script src="app.js"></script>
-</body>
+<script src="app.js?v=1"></script></body>
+    
 </html>
